--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-    <TextView
+    <ImageView
+            android:layout_width="199dp"
+            android:layout_height="161dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="184dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="104dp"/>
+    <Button
+            android:text="Selecionar Arquivo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            android:layout_height="wrap_content" android:id="@+id/btnChange"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            android:layout_marginTop="44dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="104dp"/>
+    <Button
+            android:text="Enviar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/btnUpload"
+            app:layout_constraintTop_toBottomOf="@+id/btnChange" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="160dp" android:layout_marginTop="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
