Consegui fazer download de um arquivo específico pelo endpoint do meu serviço ativo

--- a/app/src/main/res/layout/activity_pdf_reader.xml
+++ b/app/src/main/res/layout/activity_pdf_reader.xml
@@ -61,6 +61,11 @@
                     android:background="@drawable/baseline_stop"
                     android:contentDescription="TODO"/>
 
+            <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="BaixarAudio"
+                    />
 
         </LinearLayout>
 
