--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,28 +6,47 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
+
     <ImageView
             android:layout_width="199dp"
-            android:layout_height="161dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView"
+            android:layout_height="161dp"
+            tools:srcCompat="@tools:sample/avatars"
+            android:id="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="184dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="104dp"/>
-    <Button
-            android:text="Selecionar Arquivo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/btnChange"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
-            android:layout_marginTop="44dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="104dp"/>
-    <Button
-            android:text="Enviar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/btnUpload"
-            app:layout_constraintTop_toBottomOf="@+id/btnChange" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="160dp" android:layout_marginTop="8dp"/>
+            android:layout_marginTop="44dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="32dp"/>
+
     <Button
             android:text="PDF READER"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/goAudio"
+            android:textSize="22sp"
+            android:layout_width="186dp"
+            android:layout_height="69dp"
+            android:id="@+id/goAudio"
             app:layout_constraintTop_toBottomOf="@+id/btnUpload"
-            android:layout_marginTop="60dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="140dp"/>
+            android:layout_marginTop="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="68dp"/>
+
+    <Button
+            android:text="Enviar"
+            android:textSize="20sp"
+            android:layout_width="124dp"
+            android:layout_height="70dp"
+            android:id="@+id/btnUpload"
+            app:layout_constraintTop_toBottomOf="@+id/btnChange"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="88dp"
+            android:layout_marginTop="4dp"/>
+
+    <Button
+            android:text="Selecionar Arquivo"
+            android:layout_width="223dp"
+            android:layout_height="62dp"
+            android:id="@+id/btnChange"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            android:layout_marginTop="48dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="32dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
