--- a/app/src/main/res/layout/activity_pdf_reader.xml
+++ b/app/src/main/res/layout/activity_pdf_reader.xml
@@ -62,10 +62,12 @@
                     android:contentDescription="TODO"/>
 
             <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="BaixarAudio"
-                    />
+                    android:id="@+id/btnDownload"
+                    android:layout_width="250dp"
+                    android:layout_height="250dp"
+                    android:text="Baixar Audio"
+                    android:textSize="40sp"
+                    android:layout_centerInParent="true"/>
 
         </LinearLayout>
 
